--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bassel Al-Sayed",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "peerDependencies": {
     "@eslint/js": "^9.26.0",
     "@typescript-eslint/parser": "^8.32.1",
