--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "eslint-config-bsas",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
+  "keywords": [
+    "lint",
+    "eslint",
+    "typescript",
+    "react"
+  ],
   "author": "Bassel Al-Sayed",
-  "license": "ISC",
-  "description": "",
+  "license": "MIT",
+  "description": "An opinionated eslint typescript-react config",
   "type": "module",
   "peerDependencies": {
     "@eslint/js": "^9.26.0",
