--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-bsas",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "keywords": [
     "lint",
@@ -12,6 +12,7 @@
   "license": "MIT",
   "description": "An opinionated eslint typescript-react config",
   "type": "module",
+  "types": "index.d.ts",
   "peerDependencies": {
     "@eslint/js": "^9.26.0",
     "@typescript-eslint/parser": "^8.32.1",
