--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-bsas",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "keywords": [
     "lint",
@@ -8,6 +8,9 @@
     "typescript",
     "react"
   ],
+  "scripts": {
+    "publish": "npm publish --access public"
+  },
   "author": "Bassel Al-Sayed",
   "license": "MIT",
   "description": "An opinionated eslint typescript-react config",
@@ -28,6 +31,8 @@
     "eslint-plugin-sort": "^4.0.0",
     "eslint-plugin-testing-library": "^7.2.0",
     "eslint-plugin-unicorn": "^59.0.1",
-    "eslint-plugin-unused-imports": "^4.1.4"
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^16.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
